Use Java 17 language level constructs (#6682)